change video to youtube

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 				<img class="img" src="image003.png" width="100%" height="auto">
 				<img class="img" src="image005.png" width="100%" height="auto">
 				<li>Demo video</li>
-				<video controls width="100%" height="auto">
-					<source src="demo.mp4" type="video/mp4">
-				</video>
+				<iframe width="100%" height="auto" src="https://youtu.be/ed1QC_ZRLAU">
+				</iframe>
 			</ol>
         </div>
         <div class="ablation-study">
