fix youtube player

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 				<img class="img" src="image003.png" width="100%" height="auto">
 				<img class="img" src="image005.png" width="100%" height="auto">
 				<li>Demo video</li>
-				<iframe width="100%" height="auto" src="https://youtu.be/ed1QC_ZRLAU">
-				</iframe>
+				<div class="video-container">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/ed1QC_ZRLAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
 			</ol>
         </div>
         <div class="ablation-study">
